# angular

./: .angulardoc.json  .babelrc  .bazelignore  .bazelrc  .bazelrc.common  .bazelversion  .bowerrc  .clang-format  .codeclimate.yml  .dev-infra.json  .dockerignore  .editorconfig  .firebaserc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage  .gitmodules  .huskyrc.json  .mailmap  .ng-dev-config.js  .ng-dev-config.ts  .npmrc  .nvmrc  .pnpmfile.cjs  .prettierignore  .prettierrc  .pullapprove.yml  .snyk  .stylelintrc.json  .travis.yml  .yarnrc  .yarnrc.yml  AGENTS.md  ANGULAR_INTERNALS_FILE_INDEX.md  ANGULAR_INTERNALS_GUIDE.md  BUILD  BUILD.bazel  BUILD_INFO  Brocfile-dart.js  (+246 more)
.github/: BUILD.bazel  CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  angular-robot.yaml  angular-robot.yml  branch-manager.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: -------------.md  -----.md  --.md  1-bug-report.md  1-bug-report.yaml  2-feature-request.md  2-feature-request.yaml  3-docs-bug.md  3-docs-bug.yaml  4-devtools.yaml  4-security-issue-disclosure.md  5-support-request.md  5-vscode.yaml  6-angular-cli.md  7-angular-components.md  7-angular-material.md  8-translate-docs.md  bug.md  bug.yml  bug_report.md  config.yml  docs.md  docs.yml  feature---proposal.md  feature-proposal.md  feature.md  feature.yml  feature_request.md  troubleshooting.md  troubleshooting.yml
.github/workflows/: adev-preview-build.yml  adev-preview-deploy.yml  ci.yml  pr.yml  (+34 more)
adev/: .gitignore  .markdownlint.jsonc  .prettierignore  .stylelintignore  .stylelintrc.json  BUILD.bazel  LOCAL-SETUP.md  README.md  angular.json  firebase.json  firebase_build.bzl  karma.conf.js  package.json  tailwind.config.js  test-main.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.worker.json  tslint.json
aio/: .angular-cli.json  .browserslistrc  .eslintrc.json  .firebaserc  .gitignore  .npmrc  BUILD.bazel  README.md  UPDATING.md  aio_targets.bzl  angular-cli.json  angular.json  babel.js  browserslist  database.rules.json  diccionario-de-términos.md  firebase.json  gulpfile.js  karma.conf.js  local_packages_util.bzl  ngsw-config.json  ngsw-config.template.json  ngsw-manifest.json  package-lock.json  package.json  patch-bo-to-make-var-iife.js  patch-cli-to-use-rollup-closure.js  patch-cli-to-use-rollup-common.js  protractor.conf.js  rollup-closure-experiment.md  security-exemptions.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.worker.json  tslint.json  turn-off-cli-transform.mjs  turn-on-cli-transform.mjs
dev-app/: BUILD.bazel  README.md  angular.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
dev-infra/: BUILD.bazel  build-worker.js  cli.ts  commit-message-filter.js  defaults.bzl  index.bzl  ng-dev  ng-dev.js  package.json  rollup.config.js  tmpl-package.json  tsconfig.json
devtools/: .bazelrc  .gitignore  .prettierrc  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  WORKSPACE  angular.json  cypress.json  initialize_testbed.ts  io_bazel_rules_sass.patch  karma.conf.js  package.json  packages.bzl  renovate.json  styles.scss  tsconfig-test.json  tsconfig.json  tsconfig.spec.json  tslint.json  tsslint.json
e2e/: BUILD.bazel  _screenshot.js  e2e.d.ts  index-e2e.spec.ts  index.e2e.js  index.e2e.ts  screenshot.ts  start-devserver.js  tsconfig.json
integration/: .gitignore  BUILD.bazel  README.md  _payload-limits.json  _payload-limits.sh  angular_integration_test.bzl  build_folder.sh  build_rxjs_es6.sh  check-dependencies.js  get-sharded-tests.js  index.bzl  ng-cli-create.sh  npm-packages-from-runfiles.js  npm-packages-from-runfiles.mjs  npm_package_archives.bzl  package.json  run_test.sh  run_tests.sh  rxjs.tsconfig.json  setup_one_time.sh  update-lock-files.mjs
src/: .bazelrc  BUILD.bazel  README.md  _index.html  apply_redirects.ts  bazel-tsconfig-build.json  bazel-tsconfig-test.json  circular-deps-test.conf.js  common_router_providers.ts  config.ts  create_router_state.ts  create_url_tree.ts  d3_shims.js  demo-application-environment.ts  demo-application-operations.ts  dev-mode-types.d.ts  iframe-message-bus.ts  index.html  index.ts  interfaces.ts  main.dart  main.scss  main.ts  module-typings.d.ts  recognize.ts  resolve.ts  router.ts  router_outlet_map.ts  router_providers.ts  router_state.ts  rxjs_shims.js  semver_dsl_shims.js  shared.ts  styles.css  styles.scss  system-config.ts  tsconfig-legacy.json  tsconfig-tsec.json  tsconfig.json  typings.d.ts  (+3 more)
test/: BUILD.bazel  angular-test-init-spec.ts  apply_redirects.spec.ts  bazel-karma-local-config.js  browser-providers.js  browser-providers.ts  create_router_state.spec.ts  create_url_tree.spec.ts  dev_mode_spec.dart  dev_mode_spec.js  karma-browsers.json  karma-system-config.js  karma-test-shim.js  karma.conf.js  karma.config.ts  protractor.conf.js  public_api_spec.dart  public_api_spec.js  recognize.spec.ts  remote_browsers.json  router.spec.ts  test-blocklist.ts  test.JSON  url_serializer.spec.ts
tools/: BUILD.bazel  angular_material_setup_workspace.bzl  angular_prerender.bzl  angular_ts_library.bzl  angular_ts_project.bzl  bazel-stamp-vars.js  bazel-stamp-vars.sh  bazel-tools-tsconfig.json  bazel.rc  bazel_stamp_vars.js  bazel_stamp_vars.sh  check-environment.js  chromedriverpatch.js  commit-message.json  create-system-config.bzl  defaults.bzl  defaults2.bzl  es5-module-output.bzl  es5-named-output.bzl  inline-package-json-deps.js  integration.bzl  jasmine-seed-generator.js  karma.bzl  multiple-node-versions.patch  ng_benchmark.bzl  ng_setup_workspace.bzl  ngsw_config.bzl  npm_sass_library.bzl  postinstall-patches.js  rbe_cross_platform_workaround.patch  rebase-pr.js  rewrite-published-package.js  rollup_bundle_commonjs_ignoreGlobal.patch  rollup_terser_incorrect_source_maps.patch  sass-bundle.ts  sass_bundle.bzl  sass_generate_binaries.bzl  system-config-tmpl.js  system-rxjs-operators.js  tsconfig-ci.json  (+10 more)
vscode-ng-language-service/: BUILD.bazel  CHANGELOG.md  DEVELOPER.md  INLINE_STYLES_ISSUES_TRIAGE.md  README.md  package.json  tsconfig.json
(+37511 files in other folders)
